--- a/src/Pages/DetailPage/DetailPage.css
+++ b/src/Pages/DetailPage/DetailPage.css
@@ -1,39 +1,64 @@
 .detailBackground {
-    background-color: rgb(16, 16, 34);
-    padding: 0;
-    min-height: 80vh;
+  background-color: rgb(16, 16, 34);
+  padding: 0 0 40px;
+  min-height: 80vh;
 }
-
+@media (min-width: 760px) {
+  .detailBackground {
+    padding: 0;
+  }
+}
 .detailContainer {
-    background-color: rgb(0, 0, 70);
+  background-color: rgb(0, 0, 70);
+  width: 80%;
+  margin: 0 auto;
+  border: none;
+  border-radius: 20px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+}
+@media (min-width: 760px) {
+  .detailContainer {
     width: 70%;
-    height: 800px;
-    margin: 0 auto;
-    gap: 50px;
-    display: flex;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
-    border: none;
-    border-radius: 20px;
+  }
 }
 .detailDates {
-    color: white;
+  color: white;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+@media (min-width: 760px) {
+  .detailDates {
     width: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
+  }
+}
+.detailDates p {
+  text-align: justify;
 }
 .detailImage {
-    width: 400px;
+  width: 100%;
+  max-width: 300px;
+}
+@media (min-width: 760px) {
+  .detailImage {
+    width: 50%;
+    max-width: 300px;
+  }
 }
 .detailTitleMovie {
-    margin-bottom: 40px;
+  margin-bottom: 20px;
 }
-
 .detailStart {
-    margin: 0;
-    padding: 0;
-    width: 40px;
+  margin: 0;
+  padding: 0;
+  width: 40px;
 }
