--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -47,7 +47,12 @@
   justify-content: center;
   text-align: center;
   gap: 10px;
-  margin: 0;
+  margin-bottom: 20px;
+}
+@media (min-width: 760px) {
+  .buttonCategoriesContainer {
+    margin-bottom: 0;
+  }
 }
 .buttonCategory {
   background-color: rgb(10, 24, 83);
@@ -103,12 +108,15 @@
 
 .cardMoviesContainer {
   padding-bottom: 30px;
+  display: grid;
+  gap: 10px;
+}
+.cardMoviesContainer a {
+  text-decoration: none;
 }
 @media (min-width: 480px) {
   .cardMoviesContainer {
-    display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10px;
   }
 }
 @media (min-width: 768px) {
@@ -152,7 +160,7 @@
   gap: 10px;
 }
 .buttonPagination {
-  background-color: white;
+  background-color: rgb(199, 199, 199);
   border: none;
   border-radius: 70%;
   margin-bottom: 20px;
